--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="task_1.js"></script>
 </body>
 </html>
